cmake_minimum_required(VERSION 3.6)
project(PocoStudy)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(Types)
add_subdirectory(ExceptionAndDebug)
add_subdirectory(Memory)
add_subdirectory(StringAndFormatting)
add_subdirectory(PlatformAndEnvironment)
add_subdirectory(RandomCrypto)
add_subdirectory(DateAndTime)
add_subdirectory(Files)
add_subdirectory(NotificationsEvents)
add_subdirectory(Streams)
add_subdirectory(Logging)
add_subdirectory(TestLib)
add_subdirectory(SharedLibraries)
add_subdirectory(Threads)
add_subdirectory(Cache)
add_subdirectory(Hashing)
add_subdirectory(Processes)
add_subdirectory(URIAndUUID)
add_subdirectory(XML)
add_subdirectory(Configuration)
add_subdirectory(LoggingConfiguration)
add_subdirectory(Applications)
#add_subdirectory(Curl)

set(SOURCE_FILES main.cpp)
add_executable(PocoStudy ${SOURCE_FILES})
#target_link_libraries(PocoStudy cygPocoFoundation.dll)